fix: overflow

--- a/src/app/(dashboard)/dashboard.css
+++ b/src/app/(dashboard)/dashboard.css
@@ -12,7 +12,7 @@
   *,
   *::before,
   *::after {
-    --bc: rgb(92, 92, 92);
+    --bc: rgb(60, 60, 60);
   }
 }
 
